# virtualsoc-wcdma

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ProjectHome.md  README
DRAMSim2/: CMakeLists.txt  Makefile
DRAMSim2/include/DRAMSim2/: BusPacket.h  ClockDomain.h  Transaction.h
DRAMSim2/ini/: system.ini
DRAMSim2/src/: AddressMapping.cpp  Bank.cpp  BankState.cpp  BusPacket.cpp  ClockDomain.cpp  CommandQueue.cpp  IniReader.cpp  MemoryController.cpp  MemorySystem.cpp  MultiChannelMemorySystem.cpp  Rank.cpp  SimulatorObject.cpp  TraceBasedSim.cpp  Transaction.cpp
DRAMSim2/utils/: CMakeLists.txt  TraceBasedSim.cpp
cmake/: FindSystemC.cmake
fir/: CMakeLists.txt
fir/test/: CMakeLists.txt  display.hpp  main.cpp  stimulus.hpp
libsimsoc/: CMakeLists.txt
libsimsoc/include/libsimsoc/: bitwise_operator.hpp  display.hpp  simsoc-config.h
libsimsoc/include/libsimsoc/components/: debug_console.hpp  memory.hpp  ti_am1x_core.hpp  ti_am1x_rtc.hpp
libsimsoc/include/libsimsoc/network/ethernet/: ether-transport.hpp
libsimsoc/include/libsimsoc/processors/: mmu.hpp  processor.hpp  processor_base.hpp
libsimsoc/include/libsimsoc/processors/arm_v6/: arm_v6_processor.hpp
libsimsoc/include/libsimsoc/tools/debugger/: debugger.hpp
libsimsoc/src/: display.cpp  random.cpp  stamp-h1
libsimsoc/src/components/: bus.cpp  dce_factory.cpp  dce_host_uart.cpp  dce_host_uart_pthread.cpp  dce_null_modem.cpp  dce_xterm_pthread.cpp  elf_loader.cpp  irqc.cpp  nand_flash.cpp  primecell_dmac_pl080.cpp  primecell_uart.cpp  rtc.cpp  watchdog.cpp
libsimsoc/src/interfaces/: RS232.cpp
libsimsoc/src/network/ethernet/arch/: ethtr-pcap.cpp
libsimsoc/src/processors/: common.cpp  iss.cpp  llvm_gen_parameters.cpp  mmu.tpp  processor_base.cpp  tlb.tpp
libsimsoc/src/processors/arm/: arm_coproc.cpp  arm_cpu.cpp  arm_loadstore.cpp  arm_mmu.cpp  arm_processor.cpp  arm_status_register.cpp  arm_translate.cpp  arm_translation_page.cpp  armis_control.cpp  armis_coproc.cpp  armis_loadstore.cpp  armpi.cpp  thumb_translate.cpp  thumbis_arithmetic.cpp  thumbis_loadstore.cpp
libsimsoc/src/processors/arm/ArmGen/: armgen.cpp  armgen_clz.cpp  armgen_ldmstm.cpp  armgen_loadstore.cpp  armgen_mli.cpp  armgen_mrsmsr.cpp  armgen_swi.cpp  armgen_swp.cpp  main.cpp
libsimsoc/src/processors/arm_v6/: arm_v5_mmu.cpp  arm_v5_systemcontrol_coproc.cpp  arm_v5_tlb.cpp  arm_v6_coproc.cpp  arm_v6_llvm_generator.cpp  arm_v6_llvm_lib.cpp  arm_v6_llvm_server.cpp  arm_v6_printers.cpp  arm_v6_processor.cpp  arm_v6_translation_page.cpp
libsimsoc/src/processors/arm_v6/simlight/: slv6_condition.c  slv6_iss.c  slv6_iss_arm_decode_store.c  slv6_iss_grouped.cold.c  slv6_math.c  slv6_mode.c  slv6_status_register.c
libsimsoc/src/tools/debugger/: debugger.cpp
libsimsoc/utils/ISC/: Makefile  isc.cpp  isc.hpp  isc_args.cpp  isc_main.cpp  isc_parse.cpp
libsimsoc/utils/MakeFlash/: Makefile  Makefile.am  Makefile.in
libsimsoc/utils/SNS/: Makefile.in
virtualsoc/: CMakeLists.txt
virtualsoc-apps/: .gitignore  CMakeLists.txt  setenv.sh
virtualsoc-apps/cmake/: FindStandardLibs.cmake  arm-elf-toolchain.cmake
virtualsoc-apps/gomp/: CMakeLists.txt
virtualsoc-apps/gomp/config/vsoc/: vsoc_config.h
virtualsoc-apps/gomp/include/gomp/: bar.h  config.h  gomp.h  gomp_globals.h  shmalloc.h
virtualsoc-apps/gomp/src/: bar_hws.c  bar_sw.c  barrier.c  boot.c  critical.c  env.c  iter.c  libgomp.c  libgomp_globals.c  lock.c  loop.c  memutils.c  parallel.c  root.c  sections.c  shmalloc.c  single.c  team.c  work.c
virtualsoc-apps/hello_world/: CMakeLists.txt  Makefile  hello_omp_world.c  hello_world.c
virtualsoc-apps/hw_acceleration_test/: Makefile  example_hw_acceleration.c  hw_acceleration.c
virtualsoc-apps/libgomp/config/vsoc/: vsoc_config.h
virtualsoc-apps/support/: CMakeLists.txt
virtualsoc-apps/support/simulator/: accsupport.c  accsupport.h  appsupport.c  appsupport.h  countersupport.c  countersupport.h  dmasupport.c  hws_support.c
virtualsoc-apps/wcdma/: Makefile  fir.c  fir.h  qpsk.c  qpsk.h  wcdma.c  wcdma_signal_fixed.h
virtualsoc-apps/wcdma_hw/: Makefile  wcdma.c  wcdma_signal.h
virtualsoc-apps/wcdma_hw_para/: Makefile  qpsk.c  wcdma.c
virtualsoc-apps/wcdma_omp/: Makefile  Makefile_original  fir.c  fir.h  qpsk  qpsk.h  test  test.c  wcdma.c
virtualsoc/include/virtualsoc/cluster/: cl_1st_stage_demux.h  cl_DRAM-memory-mp.h  cl_L3_mux_NM.h  cl_NI_mux.h  cl_acc.h  cl_counter.h  cl_cru.h  cl_dma.h  cl_hws.h  cl_lic.h  cl_memory.h  cl_miss_mux.h  cl_pic.h  cl_platform.h  cl_platform_prv.h  cl_platform_shr.h  cl_semaphore.h  cl_sharedI_cache.h  cl_xbar_sharedI.h
virtualsoc/include/virtualsoc/core/: address.h  cache_module.h  config.h
virtualsoc/src/cluster/: cl_1st_stage_demux.cpp  cl_DRAM-memory-mp.cpp  cl_L3_mux_NM.cpp  cl_NI_mux.cpp  cl_acc.cpp  cl_counter.cpp  cl_cru.cpp  cl_dma.cpp  cl_hws.cpp  cl_lic.cpp  cl_memory.cpp  cl_miss_mux.cpp  cl_pic.cpp  cl_semaphore.cpp  cl_sync_handler.cpp  cl_xbar_sharedI.cpp
virtualsoc/src/core/: address.cpp  cache_RPU.cpp  cache_address.cpp  cache_module.cpp  cache_storagetypes.cpp  core_signal.cpp  debug.cpp  globals.cpp  main.cpp  mem_class.cpp  parser.cpp  power.cpp  sim_support.cpp  stats.cpp
(+4 files in other folders)
