##
## SimSoC Initial software, Copyright © INRIA 2007, 2008, 2009, 2010
## LGPL license version 3
##

noinst_PROGRAMS = mknandflash mkserialflash
mknandflash_SOURCES = mknandflash.cpp
mkserialflash_SOURCES = mkserialflash.cpp
mknandflash_CPPFLAGS = -I$(top_srcdir)
mkserialflash_CPPFLAGS = -I$(top_srcdir)
